# silverjuke

./: .gitignore  CHANGES.md  Makefile.am  Makefile.in  README.md  autogen.sh  configure  configure.ac  silverjuke.desktop  silverjuke.spec
docs/: command-line.md  command-line.rst  csv-over-http.md  dde.md  localization.md  plugins.md  scripting.md  skinning.md  user-guide.md  virtual-keyboards.md
po/: LINGUAS  Makevars  POTFILES.in  cs.po  da.po  de.po  en.po  en@boldquot.po  en@quot.po  es.po  fr.po  nb.po  nl.po  pt_BR.po  silverjuke.pot
src/kiss_fft/: _kiss_fft_guts.h  psdpng.c
src/prjm/: AUTHORS.txt  FAQ.txt  README-PRJM.md  amalgation.h  amalgation1.cpp  amalgation2.cpp
src/prjm/glew/: glew.h  glxew.h
src/prjm/src/: Common.hpp  HungarianMethod.hpp  KeyHandler.cpp  PipelineMerger.cpp  PipelineMerger.hpp  PresetLoader.hpp  RandomNumberGenerators.hpp  TimeKeeper.cpp  event.h  projectM.cpp  projectM.hpp
src/see/: cfunction.c  debug.c  dprint.c  dtoa.c  enumerate.c  error.c  function.c  input_lookahead.c  input_string.c  intern.c  interpreter.c  lex.c  mem.c  module.c  native.c  no.c  obj_Array.c  obj_Boolean.c  obj_Date.c  obj_Error.c  obj_Function.c  obj_Global.c  obj_Math.c  obj_Number.c  obj_Object.c  obj_RegExp.c  obj_String.c  object.c  parse.c  platform_posix.c  printf.c  regex.c  scope.c  see_array.h  see_cfunction.h  see_cfunction_private.h  see_context.h  see_debug.h  see_dprint.h  see_dtoa.h  (+45 more)
src/see_dom/: obj_Database.cpp  obj_Dialog.cpp  obj_File.cpp  obj_HttpRequest.cpp  obj_Player.cpp  obj_Program.cpp  obj_Rights.cpp  sj_see.cpp  sj_see.h  sj_see_helpers.h  sj_see_strings.inc
src/sjbase/: autoctrl.cpp  autoctrl.h  backend.cpp  backend.h  backend_gstreamer.cpp  backend_gstreamer.h  backend_xine.cpp  backend_xine.h  base.h  browser.cpp  browser.h  browser_album.cpp  browser_album.h  browser_cover.cpp  browser_cover.h  browser_list.cpp  browser_list.h  columnmixer.cpp  columnmixer.h  compileoptions.h  display.cpp  display.h  ids.h  mainapp.cpp  mainapp.h  mainframe.cpp  mainframe.h  mainframe_menu.cpp  player.cpp  player.h  player_base.cpp  player_impl_gstreamer.cpp  player_impl_xine.cpp  player_impl_xine.h  playlist.cpp  playlist.h  queue.cpp  queue.h  search.cpp  search.h  (+7 more)
src/sjdata/: bin2c.php  bin2c.sh  data.cpp
src/sjdata/icons/: xpm_emptycursor_16.xpm  xpm_emptycursor_32.xpm  xpm_movehand_16.xpm  xpm_movehand_32.xpm  xpm_sj_16.xpm  xpm_sj_32.xpm
src/sjdata/keyboards/: da.sjk  de.sjk  de_CH.sjk  de_DE.sjk  el.sjk  en.sjk  en_CA.sjk  en_US.sjk  es.sjk  es_var.sjk  fi.sjk  fr.sjk  fr_BE.sjk  fr_CA.sjk  fr_CH.sjk  fr_FR.sjk  no.sjk  sv.sjk
src/sjdata/vis/: Aderrasi - Accelerator (Hot Lead Transfusion).milk  Aderrasi - Ghast Entity.milk  Aderrasi - Songflower (Hybrid Plant).milk  Fvese - Rebirth.milk  Fvese - Zoom Effects (Remix 2).milk  Geiss - Chrome.milk  Geiss - Julia Fractal 3 square mix.milk  Geiss - Mandelbrot 9c2.milk  Geiss - Neutron - radial blur 2.milk  Geiss - Tadpole Hunter.milk  Idiot & Rovastar - Harlequin Trapped In Marphet's Vortex 2.milk  Krash & Telek - Real Noughts and Crosses (Random Ending).milk  Mstress - Acoustic Nerve Impulses (Primary Colors Of Sound Mix).milk  ORB - Fire and Fumes 2.milk  Rovastar - VooV's Brainwaves.milk  Rozzor & Rovastar - Shame Turns inTo Change.milk  Scanner (@ztec)2.milk  Zylot - Age of Science (seeking truth mix).milk  Zylot - Digiscape Advanced Processor.milk  Zylot - Magma Crawl.milk  Zylot - Riding The Sound Waves.milk  baked - River of Illusion (InfecteD acid mix).milk  fiShbRaiN - betelguese.milk  fiShbRaiN - breakfast cruiser.milk  fiShbRaiN - crystal glasses.milk  fiShbRaiN - quiet nights in the physics lab.milk  fiShbRaiN - when robots take over the world.milk  fiShbRaiN - witchcraft (necromancer remix)_phat_edit_v3.milk  idiot - Random Water Colours.milk  nil & Aderassi & EMPR - Curling Flower Space 2 (Electric Bo.milk  nil & EMPR - Electron Flow (Copper Wire Mix).milk  shifter - glassworms flare.milk  shifter - morphid.milk  shifter - pipes (metallic).milk  shifter - tumbling cubes (endless) radial blur.milk  yin + Geiss - 240 - Electric universe (Bkg Mix).milk  yin - 030 - Dance with the ocean.milk  yin - 060 - PLU.milk  yin - 210 - Beat it.milk  (+2 more)
src/sjmodules/: accel.cpp  accel.h  advsearch.cpp  advsearch.h  arteditor.cpp  arteditor.h  basicsettings.cpp  basicsettings.h  cinterface.cpp  cinterface.h  internalinterface.cpp  internalinterface.h  library.cpp  library.h  modulebase.cpp  modulebase.h  mymusic.cpp  mymusic.h  openfiles.cpp  openfiles.h  playbacksettings.cpp  playbacksettings.h  settings.cpp  settings.h  upnp.cpp  upnp.h  viewsettings.cpp  viewsettings.h  weblinks.cpp  weblinks.h
src/sjtools/: busyinfo.cpp  busyinfo.h  console.cpp  console.h  csv_tokenizer.cpp  csv_tokenizer.h  dialog.cpp  dialog.h  explore.cpp  ext_list.cpp  ext_list.h  fs_inet.cpp  fs_inet.h  gcalloc.cpp  gcalloc.h  hash.c  hash.h  homepageids.h  http.cpp  http.h  imgop.cpp  imgop.h  imgthread.cpp  imgthread.h  levensthein.c  levensthein.h  littleoption.cpp  littleoption.h  msgbox.cpp  msgbox.h  normalise.cpp  normalise.h  ringbuffer.cpp  ringbuffer.h  sqlt.cpp  sqlt.h  temp_n_cache.cpp  temp_n_cache.h  testdrive.cpp  testdrive.h  (+14 more)
src/sqlite/: config_sqlite.h
src/supereq/: Fftsg_fl.cpp  dsp_superequ.txt  paramlist.hpp
src/tagger/: COPYING.LGPL  COPYING.MPL  README_TAGGER.TXT  tg_a_tagger_frontend.cpp  tg_a_tagger_frontend.h  tg_ape_tag.cpp  tg_ape_tag.h  tg_bytefile.cpp  tg_bytefile.h  tg_bytevector.cpp  tg_bytevector.h  tg_combined_tag.h  tg_flac_file.cpp  tg_flac_file.h  tg_id3v1_tag.cpp  tg_id3v1_tag.h  tg_id3v2_frame.cpp  tg_id3v2_frame.h  tg_id3v2_framefactory.cpp  tg_id3v2_framefactory.h  tg_id3v2_header_footer.cpp  tg_id3v2_header_footer.h  tg_id3v2_knownframes.cpp  tg_id3v2_knownframes.h  tg_id3v2_tag.cpp  tg_id3v2_tag.h  tg_monkeys_file.h  tg_mp4_boxes.cpp  tg_mp4_boxes.h  tg_mp4_file.cpp  tg_mp4_file.h  tg_mpc_file.cpp  tg_mpc_file.h  tg_mpeg_file.cpp  tg_mpeg_file.h  tg_mpeg_header.cpp  tg_mpeg_header.h  tg_mpeg_properties.cpp  tg_mpeg_properties.h  tg_ogg_file.cpp  (+18 more)
(+211 files in other folders)
